<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="355dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="46dp"
        android:background="@drawable/dialog_poup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:layout_marginTop="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_tickk" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/gilroy_bold"
            android:text="@string/thank_you"
            android:textAlignment="center"
            android:textColor="@color/newcolor"
            android:textSize="@dimen/sp_20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView9" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="@dimen/dp_280"
            android:layout_height="@dimen/dp_42"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/gilroy_regular"
            android:gravity="center"
            android:text="@string/congratulations_your_call_has_been_scheduled_successfully"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14"
            app:layout_constraintEnd_toEndOf="@+id/textView18"
            app:layout_constraintStart_toStartOf="@+id/textView18"
            app:layout_constraintTop_toBottomOf="@+id/textView18" />

        <Button
            android:id="@+id/done_button"
            android:layout_width="@dimen/dp_280"
            android:layout_height="@dimen/dp_46"
            android:layout_marginTop="24dp"
            android:background="@drawable/btncolor"
            android:fontFamily="@font/gilroy_medium"
            android:text="@string/go_to_my_counsellings"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="@dimen/sp_14"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="@+id/textView19"
            app:layout_constraintStart_toStartOf="@+id/textView19"
            app:layout_constraintTop_toBottomOf="@+id/textView19">
        </Button>

        <TextView
            android:id="@+id/txtview"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_21"
            android:layout_marginStart="8dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/gilroy_medium"
            android:gravity="center"
            android:text="@string/back_to_home"
            android:textAllCaps="false"
            android:textColor="@color/orange"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="@+id/done_button"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="@+id/done_button"
            app:layout_constraintTop_toBottomOf="@+id/done_button">
        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>