<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_342"
        android:layout_marginStart="8dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="46dp"
        android:background="@drawable/dialog_poup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView15"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/gilroy_bold"
            android:text="@string/a_message_has_been_sent"
            android:textAlignment="center"
            android:textColor="@color/newcolor"
            android:textSize="@dimen/sp_20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView8" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="@dimen/dp_280"
            android:layout_height="@dimen/dp_42"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/gilroy_regular"
            android:gravity="center"
            android:text="@string/you_ll_shortly_receive_a_message_with_instructions_to_set_up_your_password"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14"
            app:layout_constraintEnd_toEndOf="@+id/textView15"
            app:layout_constraintStart_toStartOf="@+id/textView15"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <Button
            android:id="@+id/button3"
            android:layout_width="@dimen/dp_280"
            android:layout_height="@dimen/dp_46"
            android:layout_marginTop="24dp"
            android:background="@drawable/btncolor"
            android:fontFamily="@font/gilroy_medium"
            android:text="@string/done"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="@+id/textView16"
            app:layout_constraintStart_toStartOf="@+id/textView16"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:layout_marginStart="117dp"
            android:layout_marginTop="42dp"
            android:layout_marginEnd="117dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_tickk" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
