<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:background="@drawable/layout_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_marginBottom="@dimen/dp_32"
            android:src="@drawable/vaccin"
            app:layout_constraintBottom_toBottomOf="@id/layout"
            app:layout_constraintStart_toStartOf="@id/layout"
            app:layout_constraintTop_toTopOf="@id/layout">
        </ImageView>

        <TextView
            android:id="@+id/textView25"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_14"
            android:fontFamily="@font/gilroy_bold"
            android:gravity="left"
            android:text="@string/covishield"
            android:textColor="@color/newcolor"
            android:textSize="@dimen/dp_15"
            app:layout_constraintStart_toEndOf="@+id/imageView18"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:fontFamily="@font/gilroy_regular"
            android:gravity="left"
            android:inputType="textMultiLine"
            android:text="@string/lorem_ipsum_dolar_sit_amet_cons"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_12"
            app:layout_constraintStart_toEndOf="@+id/imageView18"
            app:layout_constraintTop_toBottomOf="@+id/textView25" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginBottom="@dimen/dp_46"
            android:fontFamily="@font/gilroy_bold"
            android:text="@string/_3000"
            android:textColor="@color/newcolor"
            android:textSize="@dimen/sp_15"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView18"
            app:layout_constraintTop_toBottomOf="@+id/textView26" />

        <TextView
            android:id="@+id/textView31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="17dp"
            android:fontFamily="@font/gilroy_regular"
            android:gravity="left"
            android:text="@string/included_vaccines_12"
            android:textSize="@dimen/sp_12"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView27"
            app:layout_constraintTop_toBottomOf="@+id/textView27"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView39"
            android:layout_width="47dp"
            android:layout_height="31dp"
            android:layout_marginStart="@dimen/dp_8"
            android:drawableStart="@drawable/ic_star"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:text="4.0"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView27"
            app:layout_constraintStart_toEndOf="@+id/textView27">
        </TextView>

        <ImageView
            android:id="@+id/imageView29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_11"
            android:layout_marginEnd="@dimen/dp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_iconn" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>