<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen"
    tools:context=".ui.view.activity.forgotPassword">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="66dp"
        android:layout_height="66dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:srcCompat="@drawable/ic_lock"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        style="@style/normaltxt_24sp_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/forgot_password"
        android:textColor="@color/newcolor"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/gilroy_regular"
        android:gravity="center_horizontal"
        android:text="@string/enter_your_email_or_phone_number_you_will_receive_a_code_to_create_a_new_password"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <EditText
        android:id="@+id/forgottextfield"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginStart="@dimen/dp_32"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="@dimen/dp_32"
        android:background="@drawable/layout_view_shape"
        android:hint="@string/enter_email_or_phone_number"
        android:maxLength="50"
        android:paddingStart="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16"
        android:singleLine="true"
        app:hintTextColor="@color/grey"
        android:textColor="@color/newblack"
        style="@style/normaltxt_14sp_Regular"
        app:layout_constraintEnd_toEndOf="@id/textView9"
        app:layout_constraintStart_toStartOf="@id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9"/>


    <include
        android:id="@+id/btn"
        layout="@layout/common_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/forgottextfield"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/forgottextfield"
        app:layout_constraintTop_toBottomOf="@+id/forgottextfield" />
</androidx.constraintlayout.widget.ConstraintLayout>